--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@
     <body>
         <div class="navigation">
             <ul class="navigation__list">
-                <li class="navigation__item"><a href="#" class="navigation__link navigation__link--active">Work</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link">Art</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link">Contact</a></li>
+                <li class="navigation__item">
+                    <a href="#" class="navigation__link navigation__link--active">Work</a>
+                </li>
+                <li class="navigation__item">
+                    <a href="#" class="navigation__link">Art</a>
+                </li>
+                <li class="navigation__item">
+                    <a href="#" class="navigation__link">Contact</a>
+                </li>
             </ul>
             <div class="logo">
                 <a href="#">Serena Chan</a>
