Implemented work experience animation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
         <link rel="stylesheet" href="css/icon-font.css"> <!--Downloaded from linea.io-->
         <link rel="stylesheet" href="css/style.css">
         <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-
         <title>Serena Chan</title>
     </head>
     <body>
@@ -37,6 +36,50 @@
                 </h1>
             </div>
         </header>
-        <main></main>
+        <main>
+            <section class="section-experience">
+                <div class="section-heading">
+                    <h2 class="heading-secondary">
+                        <span class='heading-arrow'>&#8594;</span>Experience
+                    </h2>
+                </div>
+                <div class="container">
+                    <div class="tree show-on-scroll">
+                        <div class="tree__branch--vertical"></div>
+                        <div class="tree__branch--horizontal">
+                            <span class="tree__text" id="tree__text--citi">Citigroup</span>
+                        </div>
+                        <div class="tree__subtree--expand" id="tree__subtree">
+                            <div class="tree__branch--vertical"></div>
+                            <div class="tree__branch--horizontal">
+                                <span class="tree__text">[0]FX</span>
+                            </div>
+                            <div class="tree__branch--vertical"></div>
+                            <div class="tree__branch--horizontal">
+                                <span class="tree__text">[1]Commodities</span>
+                            </div>
+                        </div>
+                        <div class="tree__branch--vertical"></div>
+                        <div class="tree__branch--horizontal">
+                            <span class="tree__text" id="tree__text--sky">Sky</span><br/>
+                        </div>
+                    </div>
+                    <div class="work-experience show-on-scroll2">
+                        <div class="work-experience--title heading-tertiary">Commodities eTrading Software Engineer <span class="heading-primary--main1">@ Citi</span></div>
+                        <div class="work-experience--timeframe heading-quarternary">Aug 2019 - Present</div>
+                        <div class="heading-quarternary">
+                            <ul>
+                                <li>Contribute in developing the back end of a high performance LTA eTrading platform with python</li>
+                                <li>Developed the backtest / regression test for the eTrading pricing platform to ensure that changes made to the codebase will still price with the expected tick</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+
+            </section>
+        </main>
         <footer></footer>
+        <script src="./scripts/tree.js"></script>
     </body>
+</html>
