--- a/index.html
+++ b/index.html
@@ -47,31 +47,57 @@
                     <div class="tree show-on-scroll">
                         <div class="tree__branch--vertical"></div>
                         <div class="tree__branch--horizontal">
-                            <span class="tree__text" id="tree__text--citi">Citigroup</span>
+                            <span class="tree__text" id="citi">Citigroup</span>
                         </div>
                         <div class="tree__subtree--expand" id="tree__subtree">
                             <div class="tree__branch--vertical"></div>
                             <div class="tree__branch--horizontal">
-                                <span class="tree__text">[0]FX</span>
+                                <span class="tree__text" id="fx">[0]FX</span>
                             </div>
                             <div class="tree__branch--vertical"></div>
                             <div class="tree__branch--horizontal">
-                                <span class="tree__text">[1]Commodities</span>
+                                <span class="tree__text selected" id="commodities">[1]Commodities</span>
                             </div>
                         </div>
                         <div class="tree__branch--vertical"></div>
                         <div class="tree__branch--horizontal">
-                            <span class="tree__text" id="tree__text--sky">Sky</span><br/>
+                            <span class="tree__text" id="sky">Sky</span><br/>
                         </div>
                     </div>
                     <div class="work-experience show-on-scroll2">
-                        <div class="work-experience--title heading-tertiary">Commodities eTrading Software Engineer <span class="heading-primary--main1">@ Citi</span></div>
-                        <div class="work-experience--timeframe heading-quarternary">Aug 2019 - Present</div>
-                        <div class="heading-quarternary">
-                            <ul>
-                                <li>Contribute in developing the back end of a high performance LTA eTrading platform with python</li>
-                                <li>Developed the backtest / regression test for the eTrading pricing platform to ensure that changes made to the codebase will still price with the expected tick</li>
-                            </ul>
+                        <div class="work-experience--child commodities" style="visibility: visible;">
+                            <div class="work-experience--title heading-tertiary">Commodities eTrading Software Engineer <span class="heading-primary--main1">@ Citi</span></div>
+                            <div class="work-experience--details">
+                                <div class="work-experience--timeframe heading-quarternary">Aug 2019 - Present</div>
+                                <div class="heading-quarternary">
+                                    <ul>
+                                        <li>Contribute in developing the back end of a high performance LTA eTrading platform with python</li>
+                                        <li>Developed the backtest / regression test for the eTrading pricing platform to ensure that changes made to the codebase will still price with the expected tick</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="work-experience--child fx" style="visibility: hidden;">
+                            <div class="heading-tertiary">CitVelocity FX Software Engineer <span class="heading-primary--main1">@ Citi</span></div>
+                            <div>
+                                <div class="work-experience--timeframe heading-quarternary">Present</div>
+                                <div class="heading-quarternary">
+                                    <ul>
+                                        <li>Contribute in developing the front end of rate grid and order uploads</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="work-experience--child fx" style="visibility: hidden;">
+                            <div class="heading-tertiary">CitVelocity FX Software Engineer <span class="heading-primary--main1">@ Citi</span></div>
+                            <div>
+                                <div class="work-experience--timeframe heading-quarternary">Present</div>
+                                <div class="heading-quarternary">
+                                    <ul>
+                                        <li>Contribute in developing the front end of rate grid and order uploads</li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
