Fix restart work-experience--details animation bug by forcing browser to not accumulate changes

--- a/index.html
+++ b/index.html
@@ -52,21 +52,33 @@
                         <div class="tree__subtree--expand" id="tree__subtree">
                             <div class="tree__branch--vertical"></div>
                             <div class="tree__branch--horizontal">
-                                <span class="tree__text" id="fx">[0]FX</span>
+                                <span class="tree__text tree__text--selectable selected" id="fx">[0]FX</span>
                             </div>
                             <div class="tree__branch--vertical"></div>
                             <div class="tree__branch--horizontal">
-                                <span class="tree__text selected" id="commodities">[1]Commodities</span>
+                                <span class="tree__text tree__text--selectable" id="commodities">[1]Commodities</span>
                             </div>
                         </div>
                         <div class="tree__branch--vertical"></div>
                         <div class="tree__branch--horizontal">
-                            <span class="tree__text" id="sky">Sky</span><br/>
+                            <span class="tree__text tree__text--selectable" id="sky">Sky</span><br/>
                         </div>
                     </div>
                     <div class="work-experience show-on-scroll2">
-                        <div class="work-experience--child commodities" style="visibility: visible;">
-                            <div class="work-experience--title heading-tertiary">Commodities eTrading Software Engineer <span class="heading-primary--main1">@ Citi</span></div>
+                        <div class="work-experience--child fx" style="visibility: visible;">
+                            <div class="work-experience--title heading-tertiary">CitVelocity FX Software Engineer <span class="heading-primary--main1">@ Citi</span></div>
+                            <div class="work-experience--details">
+                                <div class="work-experience--timeframe heading-quarternary">Oct 2018 - Aug 2019, Present</div>
+                                <div class="heading-quarternary">
+                                    <ul>
+                                        <li>Contribute to developing the front end of rate grid and order uploads with Angular + TypeScript</li>
+                                        <li>Contributed to developing the real money blotter, allowing salespeople to modify the spread of each trade and cover risk</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="work-experience--child commodities" style="visibility: hidden;">
+                            <div class="heading-tertiary">Commodities eTrading Software Engineer <span class="heading-primary--main1">@ Citi</span></div>
                             <div class="work-experience--details">
                                 <div class="work-experience--timeframe heading-quarternary">Aug 2019 - Present</div>
                                 <div class="heading-quarternary">
@@ -77,24 +89,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="work-experience--child fx" style="visibility: hidden;">
-                            <div class="heading-tertiary">CitVelocity FX Software Engineer <span class="heading-primary--main1">@ Citi</span></div>
-                            <div>
-                                <div class="work-experience--timeframe heading-quarternary">Present</div>
+                        <div class="work-experience--child sky" style="visibility: hidden;">
+                            <div class="heading-tertiary">Summer Software Developer Intern <span class="heading-primary--main1">@ Sky</span></div>
+                            <div class="work-experience--details">
+                                <div class="work-experience--timeframe heading-quarternary">Jul 2019 - Oct 2019</div>
                                 <div class="heading-quarternary">
                                     <ul>
-                                        <li>Contribute in developing the front end of rate grid and order uploads</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="work-experience--child fx" style="visibility: hidden;">
-                            <div class="heading-tertiary">CitVelocity FX Software Engineer <span class="heading-primary--main1">@ Citi</span></div>
-                            <div>
-                                <div class="work-experience--timeframe heading-quarternary">Present</div>
-                                <div class="heading-quarternary">
-                                    <ul>
-                                        <li>Contribute in developing the front end of rate grid and order uploads</li>
+                                        <li>Contribute to developing an monitoring application using ReactJS</li>
                                     </ul>
                                 </div>
                             </div>
