Added some media queries

--- a/index.html
+++ b/index.html
@@ -102,8 +102,13 @@
                         </div>
                     </div>
                 </div>
-
-
+            </section>
+            <section class="section-whoami">
+                <div class="section-heading">
+                    <h2 class="heading-secondary">
+                        <span class='heading-arrow'>&#8594;</span>whoami
+                    </h2>
+                </div>
             </section>
         </main>
         <footer></footer>
