refactor to angular

--- a/index.html
+++ b/index.html
@@ -107,6 +107,18 @@
                 <div class="section-heading">
                     <h2 class="heading-secondary">
                         <span class='heading-arrow'>&#8594;</span>whoami
+                        <div>
+                            Hi, I'm Serena. I enjoy puzzle solving and combining creativity into my technical expertise. 
+                            My pursuit in programming started when I was 17, when I wrote my first Hello World program in university. 
+                            After graduating with a BSc (Hons) Computer Science, I decided to venture into a 
+                        </div>
+                    </h2>
+                </div>
+            </section>
+            <section class="section-sideprojects">
+                <div class="section-heading">
+                    <h2 class="heading-secondary">
+                        <span class='heading-arrow'>&#8594;</span>Side projects
                     </h2>
                 </div>
             </section>
