--- a/src/index.html
+++ b/src/index.html
@@ -2,28 +2,33 @@
 <html>
 <head>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Space+Mono&display=swap" rel="stylesheet">
-<script src='https://kit.fontawesome.com/a076d05399.js'></script>
 <link rel="stylesheet" type="text/css" rel="noopener" target="_blank" href="styles/index.css">
 <link rel="icon" type="image/x-icon" href="../assets/favicon.ico">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Serena Chan</title>
 </head>
 <body>
-    <nav class="navigation">
-        <li class="navigation__item">
-            <a class="navigation__link" href="#">Work</a>
-        </li>
-        <li class="navigation__item">
-            <a class="navigation__link" href="./art.html">Art</a>
-        </li>
-        <div class="logo">
-            <a href="#">Serena Chan</a>
-            <span class="icon">&#128296;</span>
+    <section class="landing">
+        <nav class="navigation">
+            <!-- <li class="navigation__item">
+                <a class="navigation__link" href="#">Work</a>
+            </li>
+            <li class="navigation__item">
+                <a class="navigation__link" href="./art.html">Art</a>
+            </li> -->
+            <object data="../assets/mob-icon.svg" class="mob-icon"> </object>
+            <div class="logo">
+                <a href="#">Serena Chan</a>
+                <!-- <span class="icon">&#128296;</span> -->
+            </div>
+        </nav>
+        <header class="header">
+            <div class="header__text-box">
+                I'm a <span class="">software engineer</span> based in London, U.K.
+            </div>
+        </header>
+        <div class="header__vertical-arrow">
         </div>
-    </nav>
-    <header class="header">
-        <div class="header__text-box">
-            I'm a <span class="">software engineer</span> based in London, U.K.
-        </div>
-    </header>
+    </section>
 </body>
 </html>
