--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Space+Mono&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" rel="noopener" target="_blank" href="styles/index.css">
 <link rel="icon" type="image/x-icon" href="../assets/favicon.ico">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,5 +30,42 @@
         <div class="header__vertical-arrow">
         </div>
     </section>
+    <main>
+        <section class="whoami">
+            <div class="title">
+                <code>&#60;</code>whoami<code>/></code>
+            </div>
+            <div class="profile">
+                <img src='https://www.w3schools.com/tags/img_girl.jpg' loading="lazy"/>
+            </div>
+            <div class="bio">
+                <p>
+                    Hi I’m Serena, a Platforms Engineer @ FT 🙌 I have 3+ years of full stack software development experience. From automating migrations to building beautiful things on the web, I got ya’ covered. Here are some technologies I have been using recently:
+                </p>
+                <ul>
+                    <li>
+                        Fastly
+                    </li>
+                    <li>
+                        TypeScript
+                    </li>
+                    <li>
+                        JavaScript
+                    </li>
+                    <li>
+                        CircleCI
+                    </li>
+                    <li>
+                        Node.js
+                    </li>
+                    <li>
+                        AWS
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="experience">
+        </section>
+    </main>
 </body>
 </html>
