implemented work tree

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,38 @@
             </div>
         </section>
         <section class="experience">
+            <div class="title">
+                <code>&#60;</code>work_xp<code>/></code>
+            </div>
+            <div class="container">
+                <div class="tree show-on-scroll">
+                    <div class="tree__branch--vertical"></div>
+                    <div class="tree__branch--horizontal">
+                        <span class="tree__text selected">Financial Times</span>
+                    </div>
+                    <div class="tree__branch--vertical"></div>
+                    <div class="tree__branch--horizontal">
+                        <span class="tree__text" id="citi">Citigroup</span>
+                    </div>
+                    <div class="tree__subtree--expand" id="tree__subtree">
+                        <div class="tree__branch--vertical"></div>
+                        <div class="tree__branch--horizontal">
+                            <span class="tree__text tree__text--selectable" id="fx">[0]FX</span>
+                        </div>
+                        <div class="tree__branch--vertical"></div>
+                        <div class="tree__branch--horizontal">
+                            <span class="tree__text tree__text--selectable" id="commodities">[1]Commodities</span>
+                        </div>
+                    </div>
+                    <div class="tree__branch--vertical"></div>
+                    <div class="tree__branch--horizontal">
+                        <span class="tree__text tree__text--selectable" id="sky">Sky</span><br />
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
+
+    <script src="./index.js"></script>
 </body>
 </html>
