--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
                 <div class="tree show-on-scroll">
                     <div class="tree__branch--vertical"></div>
                     <div class="tree__branch--horizontal">
-                        <span class="tree__text selected">Financial Times</span>
+                        <span class="tree__text selected" id="ft">Financial Times</span>
                     </div>
                     <div class="tree__branch--vertical"></div>
                     <div class="tree__branch--horizontal">
@@ -81,11 +81,11 @@
                     <div class="tree__subtree--expand" id="tree__subtree">
                         <div class="tree__branch--vertical"></div>
                         <div class="tree__branch--horizontal">
-                            <span class="tree__text tree__text--selectable" id="fx">[0]FX</span>
+                            <span class="tree__text tree__text--selectable" id="citi_avp">[0]FX</span>
                         </div>
                         <div class="tree__branch--vertical"></div>
                         <div class="tree__branch--horizontal">
-                            <span class="tree__text tree__text--selectable" id="commodities">[1]Commodities</span>
+                            <span class="tree__text tree__text--selectable" id="citi_grad">[1]Commodities</span>
                         </div>
                     </div>
                     <div class="tree__branch--vertical"></div>
@@ -93,6 +93,7 @@
                         <span class="tree__text tree__text--selectable" id="sky">Sky</span><br />
                     </div>
                 </div>
+                <div id="xp-description"></div>
             </div>
         </section>
     </main>
