complete work_xp section

--- a/src/index.html
+++ b/src/index.html
@@ -76,6 +76,10 @@
                     </div>
                     <div class="tree__branch--vertical"></div>
                     <div class="tree__branch--horizontal">
+                        <span class="tree__text tree__text--selectable" id="cfg">Code First Girls</span>
+                    </div>
+                    <div class="tree__branch--vertical"></div>
+                    <div class="tree__branch--horizontal">
                         <span class="tree__text" id="citi">Citigroup</span>
                     </div>
                     <div class="tree__subtree--expand" id="tree__subtree">
