implemented projects section

--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
                 <div class="tree show-on-scroll">
                     <div class="tree__branch--vertical"></div>
                     <div class="tree__branch--horizontal">
-                        <span class="tree__text selected" id="ft">Financial Times</span>
+                        <span class="tree__text" id="ft">Financial Times</span>
                     </div>
                     <div class="tree__branch--vertical"></div>
                     <div class="tree__branch--horizontal">
@@ -98,6 +98,24 @@
                     </div>
                 </div>
                 <div id="xp-description"></div>
+            </div>
+        </section>
+        <section class="projects">
+            <div class="title">
+                <code>&#60;</code>projects<code>/></code>
+            </div>
+            <div class="projects__grid">
+                <div class="projects__item">
+                    <span class="projects--arrow">></span>My own website
+                    <a href="https://github.com/serena97/portfolio" target="_blank"><img src="../assets/website.png" alt="portfolio"></a>
+                </div>
+                <div class="projects__item">
+                    <span class="projects--arrow">></span>Perlin flowfield
+                    <a href="https://github.com/serena97/perlin_p5js" target="_blank"><img src="../assets/perlin.png" alt="perlin"></a>
+                </div>
+                <div class="projects__item"><span class="projects--arrow">></span>Portfolio for someone else
+                    <a href="https://github.com/serena97/music_portfolio" target="_blank"><img src="../assets/another_portfolio.png" alt="music portfolio"></a>
+                </div>
             </div>
         </section>
     </main>
