completed get in touch

--- a/src/index.html
+++ b/src/index.html
@@ -118,6 +118,34 @@
                 </div>
             </div>
         </section>
+        <section class="get_in_touch">
+            <div class="logo">
+                <a href="#">Serena Chan</a>
+            </div>
+            <div class="title">
+                Get In Touch
+            </div>
+            <div class="emoji">
+                🤝
+            </div>
+            <div>
+                You can always say hi! I will try my best to get back to you :) 
+            </div>
+            <div class="button">
+                <a href="mailto:serena_chan@outlook.com">Say hello</a>
+            </div>
+            <div class="icons">
+                <a href="https://www.linkedin.com/in/serena97/">
+                    <img src="../assets/linkedin.svg" alt="linkedin">
+                </a>
+                <a href="https://github.com/serena97/">
+                    <img src="../assets/github.svg" alt="github icon by https://icons8.com/icon/62856/github">
+                </a>
+                <a href="https://github.com/serena97/">
+                    <img src="../assets/instgram.svg" alt="github icon by https://icons8.com/icon/62856/github">
+                </a>
+            </div>
+        </section>
     </main>
 
     <script src="./index.js"></script>
