finish mob menu

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,14 @@
             <li class="navigation__item">
                 <a class="navigation__link" href="./art.html">Art</a>
             </li> -->
-            <object data="../assets/mob-icon.svg" class="mob-icon"> </object>
+            <div class="mob-icon">
+                <object data="../assets/mob-icon.svg"></object>
+            </div>
+            <div class="background">
+                <div class="background__block">Work <span>🔧</span></div>
+                <div class="background__block">Art <span>🎨</span></div>
+                <div class="background__block">Contact <span>🤝</span></div>
+            </div>
             <div class="logo">
                 <a href="#">Serena Chan</a>
                 <!-- <span class="icon">&#128296;</span> -->
@@ -36,7 +43,7 @@
                 <code>&#60;</code>whoami<code>/></code>
             </div>
             <div class="profile">
-                <img src='https://www.w3schools.com/tags/img_girl.jpg' loading="lazy"/>
+                <img src='../assets/profile.jpeg' loading="lazy"/>
             </div>
             <div class="bio">
                 <p>
