refactor to common js file and added art page

--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,9 @@
                 <object data="../assets/mob-icon.svg"></object>
             </div>
             <div class="background">
-                <div class="background__block">Work <span>🔧</span></div>
-                <div class="background__block">Art <span>🎨</span></div>
-                <div class="background__block">Contact <span>🤝</span></div>
+                <a href="#"><div class="background__block">Work <span>🔧</span></div></a>
+                <a href="./art.html"><div class="background__block">Art <span>🎨</span></div></a>
+                <a href="#contact"><div class="background__block">Contact <span>🤝</span></div></a>
             </div>
             <div class="logo">
                 <a href="#">Serena Chan</a>
@@ -125,7 +125,7 @@
                 </div>
             </div>
         </section>
-        <section class="get_in_touch">
+        <section class="get_in_touch" id="contact">
             <div class="logo">
                 <a href="#">Serena Chan</a>
             </div>
@@ -155,6 +155,6 @@
         </section>
     </main>
 
-    <script src="./index.js"></script>
+    <script type="module" src="./index.js" defer></script>
 </body>
 </html>
