--- a/src/art.html
+++ b/src/art.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Space+Mono&display=swap" rel="stylesheet">
-<script src='https://kit.fontawesome.com/a076d05399.js'></script>
-<link rel="stylesheet" type="text/css" rel="noopener" target="_blank" href="styles/index.css">
-<link rel="icon" type="image/x-icon" href="../assets/favicon.ico">
-<title>Serena Chan</title>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" rel="noopener" target="_blank" href="styles/index.css"> <!--TODO: refactor to seperate css file-->
+    <link rel="icon" type="image/x-icon" href="../assets/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Serena Chan</title>
 </head>
 <body>
-    <nav>
-        <li class="navigation__item">
-            <a href="#">Work</a>
+    <nav class="navigation">
+        <!-- <li class="navigation__item">
+            <a class="navigation__link" href="#">Work</a>
         </li>
         <li class="navigation__item">
-            <a href="./art.html">Art</a>
-        </li>
+            <a class="navigation__link" href="./art.html">Art</a>
+        </li> -->
+        <div class="mob-icon">
+            <object data="../assets/mob-icon.svg"></object>
+        </div>
+        <div class="background">
+            <a href="./index.html#"><div class="background__block">Work <span>🔧</span></div></a>
+            <a href="#"><div class="background__block">Art <span>🎨</span></div></a>
+            <a href="./index.html#contact"><div class="background__block">Contact <span>🤝</span></div></a>
+        </div>
         <div class="logo">
             <a href="#">Serena Chan</a>
+            <!-- <span class="icon">&#128296;</span> -->
         </div>
     </nav>
-    <header class="header">
-        <div class="header__text-box">
-            I'm a <span class="">software engineer</span> based in London, U.K.
-        </div>
-    </header>
+    <script type="module" src="./art.js" defer></script>
 </body>
 </html>
