--- a/src/art.html
+++ b/src/art.html
@@ -30,6 +30,7 @@
                 <!-- <span class="icon">&#128296;</span> -->
             </div>
         </nav>
+        <div class="title art">ART</div>
         <div class="pswp-gallery" id="my-gallery">
             <a
               href="https://cdn.photoswipe.com/photoswipe-demo-images/photos/1/img-2500.jpg"
