--- a/src/index.html
+++ b/src/index.html
@@ -155,6 +155,6 @@
         </section>
     </main>
 
-    <script type="module" src="./index.js" defer></script>
+    <script type="module" src="./scripts/index.js" defer></script>
 </body>
 </html>
