client side render art page

--- a/src/art.html
+++ b/src/art.html
@@ -31,12 +31,9 @@
             </div>
         </nav>
         <div class="title art">ART</div>
-        <div class="pswp-gallery" id="my-gallery">
+        <div class="pswp-gallery grid" id="my-gallery">
           </div>
     </section>
-
-        
-
 
     <script type="module" src="./scripts/art.js"></script>
 </body>
