--- a/src/art.html
+++ b/src/art.html
@@ -1,40 +1,106 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" rel="noopener" target="_blank" href="styles/art.css">
+
+  <head>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&amp;display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" target="_blank" href="styles/art.css">
     <link rel="icon" type="image/x-icon" href="../assets/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serena Chan</title>
     <link rel="stylesheet" href="../photoswipe/dist/photoswipe.css">
-</head>
-<body>
+  </head>
+
+  <body>
     <section>
-        <nav class="navigation">
-            <!-- <li class="navigation__item">
-                <a class="navigation__link" href="#">Work</a>
-            </li>
-            <li class="navigation__item">
-                <a class="navigation__link" href="./art.html">Art</a>
-            </li> -->
-            <div class="mob-icon">
-                <object data="../assets/mob-icon.svg"></object>
-            </div>
-            <div class="background">
-                <a href="./index.html#"><div class="background__block">Work <span>🔧</span></div></a>
-                <a href="#"><div class="background__block">Art <span>🎨</span></div></a>
-                <a href="./index.html#contact"><div class="background__block">Contact <span>🤝</span></div></a>
-            </div>
-            <div class="logo">
-                <a href="#">Serena Chan</a>
-                <!-- <span class="icon">&#128296;</span> -->
-            </div>
-        </nav>
-        <div class="title art">ART</div>
-        <div class="pswp-gallery grid" id="my-gallery">
-          </div>
+      <nav class="navigation">
+        <div class="mob-icon">
+          <object data="../assets/mob-icon.svg"></object>
+        </div>
+        <div class="background">
+          <a href="./index.html#">
+            <div class="background__block">Work <span>&#128295;</span></div>
+          </a>
+          <a href="#">
+            <div class="background__block">Art <span>&#127912;</span></div>
+          </a>
+          <a href="./index.html#contact">
+            <div class="background__block">Contact <span>&#129309;</span></div>
+          </a>
+        </div>
+        <div class="logo">
+          <a href="#">Serena Chan</a>
+        </div>
+      </nav>
+      <div class="title art">ART</div>
+      <div class="pswp-gallery grid" id="my-gallery"><a href="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2F2012_dec.JPG" data-pswp-width="4764" data-pswp-height="3180" target="_blank">
+          <img src="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2F2012_dec.JPG" alt="">
+        </a>
+        <a href="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2F2012_nov.JPG" data-pswp-width="4912" data-pswp-height="3264" target="_blank">
+          <img src="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2F2012_nov.JPG" alt="">
+        </a>
+        <a href="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2FDSCF2502.jpg" data-pswp-width="5538" data-pswp-height="4130" target="_blank">
+          <img src="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2FDSCF2502.jpg" alt="">
+        </a>
+        <a href="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2Fflow.jpeg" data-pswp-width="3355" data-pswp-height="2433" target="_blank">
+          <img src="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2Fflow.jpeg" alt="">
+        </a>
+        <a href="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2Fhouse.jpeg" data-pswp-width="640" data-pswp-height="800" target="_blank">
+          <img src="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2Fhouse.jpeg" alt="">
+        </a>
+        <a href="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2Ficeland1.jpg" data-pswp-width="4032" data-pswp-height="3024" target="_blank">
+          <img src="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2Ficeland1.jpg" alt="">
+        </a>
+        <a href="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2Ficeland2.jpg" data-pswp-width="3897" data-pswp-height="3004" target="_blank">
+          <img src="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2Ficeland2.jpg" alt="">
+        </a>
+        <a href="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2Ficeland3.JPG" data-pswp-width="5197" data-pswp-height="3232" target="_blank">
+          <img src="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2Ficeland3.JPG" alt="">
+        </a>
+        <a href="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2Ficeland4.JPG" data-pswp-width="4032" data-pswp-height="3024" target="_blank">
+          <img src="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2Ficeland4.JPG" alt="">
+        </a>
+        <a href="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2Finsomnia.jpg" data-pswp-width="3771" data-pswp-height="2650" target="_blank">
+          <img src="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2Finsomnia.jpg" alt="">
+        </a>
+        <a href="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2Fmelancholy.jpg" data-pswp-width="2835" data-pswp-height="4550" target="_blank">
+          <img src="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2Fmelancholy.jpg" alt="">
+        </a>
+        <a href="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2Fmorroco.jpg" data-pswp-width="2503" data-pswp-height="3837" target="_blank">
+          <img src="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2Fmorroco.jpg" alt="">
+        </a>
+        <a href="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2Foilpainting1.jpg" data-pswp-width="2968" data-pswp-height="3892" target="_blank">
+          <img src="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2Foilpainting1.jpg" alt="">
+        </a>
+        <a href="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2Folivia.jpeg" data-pswp-width="640" data-pswp-height="759" target="_blank">
+          <img src="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2Folivia.jpeg" alt="">
+        </a>
+        <a href="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2Fred.jpg" data-pswp-width="640" data-pswp-height="769" target="_blank">
+          <img src="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2Fred.jpg" alt="">
+        </a>
+        <a href="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2Fstill.jpg" data-pswp-width="1536" data-pswp-height="2048" target="_blank">
+          <img src="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2Fstill.jpg" alt="">
+        </a>
+        <a href="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2Fstudy.jpeg" data-pswp-width="2793" data-pswp-height="3856" target="_blank">
+          <img src="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2Fstudy.jpeg" alt="">
+        </a>
+        <a href="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2Fvenice_cube.jpg" data-pswp-width="2655" data-pswp-height="3574" target="_blank">
+          <img src="https://s3.eu-west-2.amazonaws.com/serena-portfolio/album%2Fvenice_cube.jpg" alt="">
+        </a>
+      </div>
     </section>
 
-    <script type="module" src="./scripts/art.js"></script>
-</body>
+    <script type="module">
+      import PhotoSwipeLightbox from '../photoswipe/dist/photoswipe-lightbox.esm.js';
+      import PhotoSwipe from '../photoswipe/dist/photoswipe.esm.js';
+      import { initMenuListener } from './scripts/common.js'
+      initMenuListener();
+      const lightbox = new PhotoSwipeLightbox({
+        gallery: '#my-gallery',
+        children: 'a',
+        pswpModule: PhotoSwipe
+      });
+      lightbox.init();
+    </script>
+  </body>
+
 </html>
