after mobile first dev, add desktop css

--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,10 @@
 <title>Serena Chan</title>
 </head>
 <body>
+    <div class="header__vertical-arrow">
+    </div>
     <section class="landing">
         <nav class="navigation">
-            <!-- <li class="navigation__item">
-                <a class="navigation__link" href="#">Work</a>
-            </li>
-            <li class="navigation__item">
-                <a class="navigation__link" href="./art.html">Art</a>
-            </li> -->
             <div class="mob-icon">
                 <object data="../assets/mob-icon.svg"></object>
             </div>
@@ -26,7 +22,6 @@
             </div>
             <div class="logo">
                 <a href="#">Serena Chan</a>
-                <!-- <span class="icon">&#128296;</span> -->
             </div>
         </nav>
         <header class="header">
@@ -34,8 +29,6 @@
                 I'm a <span class="">software engineer</span> based in London, U.K.
             </div>
         </header>
-        <div class="header__vertical-arrow">
-        </div>
     </section>
     <main>
         <section class="whoami">
@@ -54,10 +47,10 @@
                         Fastly
                     </li>
                     <li>
-                        TypeScript
+                        JS / TypeScript
                     </li>
                     <li>
-                        JavaScript
+                        Terraform
                     </li>
                     <li>
                         CircleCI
@@ -120,8 +113,12 @@
                     <span class="projects--arrow">></span>Perlin flowfield
                     <a href="https://github.com/serena97/perlin_p5js" target="_blank"><img src="../assets/perlin.png" alt="perlin"></a>
                 </div>
-                <div class="projects__item"><span class="projects--arrow">></span>Portfolio for someone else
+                <div class="projects__item"><span class="projects--arrow">></span>Music Portfolio
                     <a href="https://github.com/serena97/music_portfolio" target="_blank"><img src="../assets/another_portfolio.png" alt="music portfolio"></a>
+                </div>
+                <div class="projects__item">
+                    <span class="projects--arrow">></span>Culture Data Visualizations
+                    <a href="https://github.com/serena97/cultureproject_fyp" target="_blank"><img src="../assets/culture-data.png" alt="portfolio"></a>
                 </div>
             </div>
         </section>
@@ -135,7 +132,7 @@
             <div class="emoji">
                 🤝
             </div>
-            <div>
+            <div class="description">
                 You can always say hi! I will try my best to get back to you :) 
             </div>
             <div class="button">
