move html to root and replace s3 bucket instances
when adding domain name to s3 you need the s3 bucket to the same name as the domain, hence the bucket name change. s3 only lets you host index.html in root

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" type="text/css" rel="noopener" target="_blank" href="styles/index.css">
-<link rel="icon" type="image/x-icon" href="../assets/favicon.ico">
+<link rel="stylesheet" type="text/css" rel="noopener" target="_blank" href="./src/styles/index.css">
+<link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Serena Chan</title>
 </head>
@@ -13,7 +13,7 @@
     <section class="landing">
         <nav class="navigation">
             <div class="mob-icon">
-                <object data="../assets/mob-icon.svg"></object>
+                <object data="./assets/mob-icon.svg"></object>
             </div>
             <div class="background">
                 <a href="#"><div class="background__block">Work <span>🔧</span></div></a>
@@ -36,7 +36,7 @@
                 <code>&#60;</code>whoami<code>/></code>
             </div>
             <div class="profile">
-                <img src='../assets/profile.jpeg' loading="lazy"/>
+                <img src='./assets/profile.jpeg' loading="lazy"/>
             </div>
             <div class="bio">
                 <p>
@@ -107,18 +107,18 @@
             <div class="projects__grid">
                 <div class="projects__item">
                     <span class="projects--arrow">></span>My own website
-                    <a href="https://github.com/serena97/portfolio" target="_blank"><img src="../assets/website.png" alt="portfolio"></a>
+                    <a href="https://github.com/serena97/portfolio" target="_blank"><img src="./assets/website.png" alt="portfolio"></a>
                 </div>
                 <div class="projects__item">
                     <span class="projects--arrow">></span>Perlin flowfield
-                    <a href="https://github.com/serena97/perlin_p5js" target="_blank"><img src="../assets/perlin.png" alt="perlin"></a>
+                    <a href="https://github.com/serena97/perlin_p5js" target="_blank"><img src="./assets/perlin.png" alt="perlin"></a>
                 </div>
                 <div class="projects__item"><span class="projects--arrow">></span>Music Portfolio
-                    <a href="https://github.com/serena97/music_portfolio" target="_blank"><img src="../assets/another_portfolio.png" alt="music portfolio"></a>
+                    <a href="https://github.com/serena97/music_portfolio" target="_blank"><img src="./assets/another_portfolio.png" alt="music portfolio"></a>
                 </div>
                 <div class="projects__item">
                     <span class="projects--arrow">></span>Culture Data Visualizations
-                    <a href="https://github.com/serena97/cultureproject_fyp" target="_blank"><img src="../assets/culture-data.png" alt="portfolio"></a>
+                    <a href="https://github.com/serena97/cultureproject_fyp" target="_blank"><img src="./assets/culture-data.png" alt="portfolio"></a>
                 </div>
             </div>
         </section>
@@ -140,18 +140,18 @@
             </div>
             <div class="icons">
                 <a href="https://www.linkedin.com/in/serena97/">
-                    <img src="../assets/linkedin.svg" alt="linkedin">
+                    <img src="./assets/linkedin.svg" alt="linkedin">
                 </a>
                 <a href="https://github.com/serena97/">
-                    <img src="../assets/github.svg" alt="github icon by https://icons8.com/icon/62856/github">
+                    <img src="./assets/github.svg" alt="github icon by https://icons8.com/icon/62856/github">
                 </a>
                 <a href="https://github.com/serena97/">
-                    <img src="../assets/instgram.svg" alt="github icon by https://icons8.com/icon/62856/github">
+                    <img src="./assets/instgram.svg" alt="github icon by https://icons8.com/icon/62856/github">
                 </a>
             </div>
         </section>
     </main>
 
-    <script type="module" src="./scripts/index.js" defer></script>
+    <script type="module" src="./src/scripts/index.js" defer></script>
 </body>
 </html>
